--- a/jina/resources/k8s/template/service.yml
+++ b/jina/resources/k8s/template/service.yml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {name}
-  namespace: {namespace}
+  name: {{ name }}
+  namespace: {{ namespace }}
   labels:
-    app: {name}
+    app: {{ name }}
 spec:
-  type: {type}
+  type: {{ type }}
   ports:
-    - port: {port}
-      targetPort: {port}
+    - port: {{ port }}
+      targetPort: {{ port }}
       name: port
       protocol: TCP
   selector:
-    app: {target}
+    app: {{ target }}
